More qualified instructors

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -20,26 +20,26 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
   people/charbonneau_amanda.html, people/chase_john.html, people/chatzidimitriou_kyriakos.html,
   people/chen_daniel.html, people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html,
-  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html,
-  people/clayton_sarah.html, people/clayton_sophie.html, people/cmero_marek.html,
-  people/code_w.html, people/coelho_luis.html, people/collings_ruth.html, people/collins_arliss.html,
-  people/collins_matthew.html, people/colonna_vincenza.html, people/cordero_victor.html,
-  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
-  people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html,
-  people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html,
-  people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html,
-  people/davey_rob.html, people/davis_m.html, people/davis_neal.html, people/debo_christof.html,
-  people/demichelis_raffaella.html, people/derrick_james.html, people/desjardins_james.html,
-  people/devenyi_gabriel.html, people/devlin_catherine.html, people/diaz-gil_andres.html,
-  people/dickenson_matt.html, people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html,
-  people/dotson_david.html, people/doyle_kimberly.html, people/droop_alastair.html,
-  people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
-  people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
-  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
-  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
-  people/farsarakis_emmanouil.html, people/fei_xu.html, people/ferguson_angus.html,
-  people/fernandes_filipe.html, people/fernandez-valverde_selene.html, people/figueira_l.html,
-  people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
+  people/christensen_erica.html, people/chuang-howe_a.html, people/chue-hong_n.html,
+  people/chung_kally.html, people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
+  people/cmero_marek.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
+  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
+  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
+  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
+  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
+  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
+  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
+  people/debo_christof.html, people/demichelis_raffaella.html, people/derrick_james.html,
+  people/desjardins_james.html, people/devenyi_gabriel.html, people/devlin_catherine.html,
+  people/diaz-gil_andres.html, people/dickenson_matt.html, people/dickson_r.html,
+  people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
+  people/doyle_kimberly.html, people/droop_alastair.html, people/duchesne_laurent.html,
+  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html,
+  people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html,
+  people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
+  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
+  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
+  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
   people/fontenelle_hugues.html, people/ford_jes.html, people/forstner_konrad.html,
   people/fournier_auriel.html, people/fowler_philip.html, people/friedline_chris.html,
   people/fu_zhuo.html, people/fucile_geoffrey.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
@@ -57,30 +57,30 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
   people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html,
   people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html,
-  people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html, people/jackson_m.html,
-  people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
-  people/johnson_ben.html, people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html,
-  people/joyce_blake.html, people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html,
-  people/ketcheson_david.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
-  people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
-  people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
+  people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
+  people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html, people/jarecka_dorota.html,
+  people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html, people/johnston_luke.html,
+  people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
+  people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html, people/khetani_radhika.html,
+  people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html,
+  people/kitzes_j.html, people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
   people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
-  people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
-  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
-  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/koontz_michael.html, people/kumar_avishek.html, people/kuzak_mateusz.html,
+  people/kwakwa_kwasi.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
+  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
   people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
   people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
   people/levernier_jacob.html, people/leyder_jean-christophe.html, people/li_peter.html,
   people/liberton_denise.html, people/lightman_matthew.html, people/lijnzaad_philip.html,
   people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
-  people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html,
-  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
-  people/mansour_tamer.html, people/marek_diana.html, people/marini_camille.html,
-  people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
-  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
-  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
-  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
-  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
+  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
+  people/manhaes-savio_alexandre.html, people/mansour_tamer.html, people/marek_diana.html,
+  people/marini_camille.html, people/martinez_paula.html, people/marwaha_kunal.html,
+  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
+  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
+  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html, people/michonneau_francois.html,
   people/middleton_ryan.html, people/miles_brian.html, people/milhans_jackie.html,
@@ -103,24 +103,25 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
   people/ramos-musalem_ana-karina.html, people/ranjard_louis.html, people/rawat_rohit.html,
   people/razoumov_alex.html, people/read_emily.html, people/rice_timothy.html, people/richie-halford_adam.html,
-  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
-  people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
-  people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/ross_noam.html,
-  people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html, people/sampath_ramesh.html,
-  people/sane_maneesha.html, people/sarahan_michael.html, people/schilling_martin.html,
-  people/schloss_pat.html, people/schmeier_sebastian.html, people/schmidt_marian.html,
-  people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
-  people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
-  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
-  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
-  people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
-  people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
-  people/sloggett_clare.html, people/small_luc.html, people/smith_byron.html, people/smith_daniel.html,
-  people/smith_j.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
-  people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
-  people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
-  people/stachelek_joseph.html, people/stacy_mark.html, people/standage_daniel.html,
-  people/staneva_valentina.html, people/stanton-cook_mitchell.html, people/staton_margaret.html,
+  people/riemer_kristina.html, people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html,
+  people/roberts_leah.html, people/robinson_james.html, people/robinson_natalie.html,
+  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html,
+  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html,
+  people/sampath_ramesh.html, people/sane_maneesha.html, people/sarahan_michael.html,
+  people/schilling_martin.html, people/schloss_pat.html, people/schmeier_sebastian.html,
+  people/schmidt_marian.html, people/schneider_juliane.html, people/schossau_j.html,
+  people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html,
+  people/serra_neem.html, people/shambaugh_brent.html, people/sharan_malvika.html,
+  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
+  people/sherman_jason.html, people/shih_yu-ching.html, people/shkurti_ardita.html,
+  people/silva_raniere.html, people/simpkin_sarah.html, people/simpson_jack.html,
+  people/simpson_john.html, people/slaybaugh_rachel.html, people/sloggett_clare.html,
+  people/small_luc.html, people/smith_byron.html, people/smith_daniel.html, people/smith_j.html,
+  people/smorul_mike.html, people/soares-siqueira_abel.html, people/soderberg_courtney.html,
+  people/soontiens_nancy.html, people/speer_donald.html, people/srinath_ashwin.html,
+  people/srinivasan_karthik.html, people/st-onge_pier-luc.html, people/stachelek_joseph.html,
+  people/stacy_mark.html, people/standage_daniel.html, people/staneva_valentina.html,
+  people/stanton-cook_mitchell.html, people/stapleton_jim.html, people/staton_margaret.html,
   people/steinbach_peter.html, people/stevens_sarah.html, people/stillwell_mark.html,
   people/stimberg_marcel.html, people/strootman_jonathan.html, people/sumner_mike.html,
   people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html,
@@ -140,10 +141,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
   people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html,
   people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
-  people/wheeler_daniel.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
-  people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
-  people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
-  people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
+  people/wheeler_daniel.html, people/wheelhouse_mark.html, people/whitaker_melissa.html,
+  people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
+  people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
+  people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
+  people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
   people/wilson_g.html, people/wilson_p.html, people/winston_donald.html, people/winton_jared.html,
   people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/yang_fan.html,
   people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
