--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -66,10 +66,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/kitzes_j.html, people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
   people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
   people/koontz_michael.html, people/kumar_avishek.html, people/kuzak_mateusz.html,
-  people/kwakwa_kwasi.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
-  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
-  people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
-  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
+  people/kwakwa_kwasi.html, people/labou_stephanie.html, people/lafleur_olivier.html,
+  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
+  people/laken_benjamin.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
+  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
+  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/leng_joanna.html,
   people/levernier_jacob.html, people/leyder_jean-christophe.html, people/li_peter.html,
   people/liberton_denise.html, people/lightman_matthew.html, people/lijnzaad_philip.html,
   people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
@@ -82,18 +83,18 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
-  people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html, people/michonneau_francois.html,
-  people/middleton_ryan.html, people/miles_brian.html, people/milhans_jackie.html,
-  people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
-  people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html,
-  people/mueller_andreas.html, people/mueller_markus.html, people/munoz_ian.html,
-  people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html,
-  people/navarro_francisco.html, people/nederbragt_l.html, people/neeb_moritz.html,
-  people/nenadic_aleksandra.html, people/neufeld_ryan.html, people/nielsen_daiva.html,
-  people/nielsen_jens.html, people/nilsson_matthias.html, people/nunez-iglesias_juan.html,
-  people/ocais_alan.html, people/odell_allison-jai.html, people/ogrady_tina.html,
-  people/oleary_aaron.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
-  people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
+  people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
+  people/michnowicz_s.html, people/michonneau_francois.html, people/middleton_ryan.html,
+  people/miles_brian.html, people/milhans_jackie.html, people/mills_b.html, people/miotto_amanda.html,
+  people/mistry_meeta.html, people/mitchell_i.html, people/mokhtarzadeh_hamid.html,
+  people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html, people/mueller_andreas.html,
+  people/mueller_markus.html, people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html,
+  people/nahum_josh.html, people/nakhoul_hani.html, people/navarro_francisco.html,
+  people/nederbragt_l.html, people/neeb_moritz.html, people/nenadic_aleksandra.html,
+  people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
+  people/ogrady_tina.html, people/oleary_aaron.html, people/olson_r.html, people/olsson_catherine.html,
+  people/orendt_anita.html, people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
   people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
   people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
   people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
@@ -130,22 +131,22 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/telenczuk_maria.html, people/terman_rochelle.html, people/teucher_andrew.html,
   people/thoele_florian.html, people/thomas_adam.html, people/thomson_samuel.html,
   people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
-  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/turek_daniel.html,
-  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
-  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
-  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
-  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
-  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
-  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
-  people/vilbig_kevin.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
-  people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
-  people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html,
-  people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
-  people/wheeler_daniel.html, people/wheelhouse_mark.html, people/whitaker_melissa.html,
-  people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
-  people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
-  people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
-  people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
+  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html,
+  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html,
+  people/ushizima_daniela.html, people/vahtras_olav.html, people/vaidyanathan_ramnath.html,
+  people/valls-guimera_roman.html, people/van-der-helm_edwin.html, people/van-der-walt_anelda.html,
+  people/van-heusden_peter.html, people/van-rossum_thea.html, people/van-schyndel_jay.html,
+  people/van-tuyl_steve.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
+  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
+  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
+  people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
+  people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html, people/wasser_leah.html,
+  people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html, people/weber_lukas.html,
+  people/weinstein_ben.html, people/wheeler_daniel.html, people/wheelhouse_mark.html,
+  people/whitaker_melissa.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
+  people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
+  people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
+  people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
   people/wilson_g.html, people/wilson_p.html, people/winston_donald.html, people/winton_jared.html,
   people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/yang_fan.html,
   people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
