--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -13,38 +13,40 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
   people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
   people/bostroem_a.html, people/boughton_andrew.html, people/boyle_amy.html, people/bray_e.html,
-  people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
-  people/brunson_dana.html, people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html,
-  people/calhoun_patrick.html, people/camins-esakov_jared.html, people/canino-koning_r.html,
-  people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html, people/carr_lindsay.html,
-  people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
-  people/charbonneau_amanda.html, people/chase_john.html, people/chatzidimitriou_kyriakos.html,
-  people/chen_daniel.html, people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html,
-  people/christensen_erica.html, people/chuang-howe_a.html, people/chue-hong_n.html,
-  people/chung_kally.html, people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
-  people/cmero_marek.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
-  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
-  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
-  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
-  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
-  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
-  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
-  people/debo_christof.html, people/demichelis_raffaella.html, people/derrick_james.html,
-  people/desjardins_james.html, people/devenyi_gabriel.html, people/devlin_catherine.html,
-  people/diaz-gil_andres.html, people/dickenson_matt.html, people/dickson_r.html,
-  people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
-  people/doyle_kimberly.html, people/droop_alastair.html, people/duchesne_laurent.html,
-  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html,
-  people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html,
-  people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
-  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
-  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
-  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
-  people/fontenelle_hugues.html, people/ford_jes.html, people/forstner_konrad.html,
-  people/fournier_auriel.html, people/fowler_philip.html, people/friedline_chris.html,
-  people/fu_zhuo.html, people/fucile_geoffrey.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
+  people/brin_lindsay.html, people/broman_karl.html, people/brown_amy.html, people/brown_ct.html,
+  people/brown_kyler.html, people/brunson_dana.html, people/bryan_j.html, people/burns_s.html,
+  people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
+  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
+  people/carr_lindsay.html, people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html,
+  people/chan_cliburn.html, people/charbonneau_amanda.html, people/chase_john.html,
+  people/chatzidimitriou_kyriakos.html, people/chen_daniel.html, people/chisholm_chelsea.html,
+  people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html, people/chuang-howe_a.html,
+  people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html, people/clayton_sarah.html,
+  people/clayton_sophie.html, people/cmero_marek.html, people/code_w.html, people/coelho_luis.html,
+  people/collings_ruth.html, people/collins_arliss.html, people/collins_matthew.html,
+  people/colonna_vincenza.html, people/cordero_victor.html, people/corless_john.html,
+  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
+  people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
+  people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
+  people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
+  people/davis_m.html, people/davis_neal.html, people/debo_christof.html, people/demichelis_raffaella.html,
+  people/dennis_tim.html, people/derrick_james.html, people/desjardins_james.html,
+  people/devenyi_gabriel.html, people/devlin_catherine.html, people/diaz-gil_andres.html,
+  people/dickenson_matt.html, people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html,
+  people/dotson_david.html, people/doyle_kimberly.html, people/droop_alastair.html,
+  people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
+  people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
+  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
+  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
+  people/farsarakis_emmanouil.html, people/fauber_bennet.html, people/fei_xu.html,
+  people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
+  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/flaxman_abraham.html,
+  people/fonnesbeck_chris.html, people/fontenelle_hugues.html, people/ford_jes.html,
+  people/forstner_konrad.html, people/fournier_auriel.html, people/fowler_philip.html,
+  people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html, people/furstenau_tara.html,
+  people/gacenga_francis.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
   people/garcia-gutierrez_leonor.html, people/garcia_julian.html, people/garoutte_aaron.html,
-  people/gates_chris.html, people/gatto_laurent.html, people/ghaffari_noushin.html,
+  people/gates_chris.html, people/gatto_laurent.html, people/geiger_stuart.html, people/ghaffari_noushin.html,
   people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
   people/gonzalez_ivan.html, people/gorman_gerard.html, people/graham_laura.html,
   people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html, people/guignard_thomas.html,
@@ -94,20 +96,21 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
   people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
   people/ogrady_tina.html, people/oleary_aaron.html, people/olson_r.html, people/olsson_catherine.html,
-  people/orendt_anita.html, people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
-  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
-  people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
-  people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
-  people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html,
-  people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
-  people/pritchard_leighton.html, people/profiti_giuseppe.html, people/provencher_francoise.html,
-  people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
-  people/ramos-musalem_ana-karina.html, people/ranjard_louis.html, people/rawat_rohit.html,
-  people/razoumov_alex.html, people/read_emily.html, people/rice_timothy.html, people/richie-halford_adam.html,
-  people/riemer_kristina.html, people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html,
-  people/roberts_leah.html, people/robinson_james.html, people/robinson_natalie.html,
-  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html,
-  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html,
+  people/orendt_anita.html, people/orr_adam.html, people/ory_j.html, people/palamartchouk_kirill.html,
+  people/palm_francisco.html, people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html,
+  people/peek_ryan.html, people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html,
+  people/perignon_mariela.html, people/perrett_heidi.html, people/perry_adam.html,
+  people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html, people/pinska_adrianna.html,
+  people/pipitone_j.html, people/pitchers_w.html, people/plumbley_m.html, people/pollard_tom.html,
+  people/pomorski_pawel.html, people/preeyanon_likit.html, people/pritchard_leighton.html,
+  people/profiti_giuseppe.html, people/provencher_francoise.html, people/psomopoulos_fotis.html,
+  people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
+  people/ranjard_louis.html, people/rawat_rohit.html, people/razoumov_alex.html, people/read_emily.html,
+  people/rice_timothy.html, people/richie-halford_adam.html, people/riemer_kristina.html,
+  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
+  people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
+  people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/ross_noam.html,
+  people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html, people/sadjadi_seyed-mahdi.html,
   people/sampath_ramesh.html, people/sane_maneesha.html, people/sarahan_michael.html,
   people/schilling_martin.html, people/schloss_pat.html, people/schmeier_sebastian.html,
   people/schmidt_marian.html, people/schneider_juliane.html, people/schossau_j.html,
@@ -148,8 +151,8 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
   people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
   people/wilson_g.html, people/wilson_p.html, people/winston_donald.html, people/winton_jared.html,
-  people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/yang_fan.html,
-  people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
+  people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/wu_steven.html,
+  people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
   people/zhang_jingchao.html, people/zhang_qp.html, people/zimmerman_naupaka.html,
   people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
