Three more people

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -4,7 +4,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
   people/anderson_c.html, people/anghel_catalina.html, people/antonioletti_mario.html,
   people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
-  people/bae_sung.html, people/bahlai_christie.html, people/banaszkiewicz_piotr.html,
+  people/bae_sung.html, people/bahlai_christie.html, people/bajcz_alex.html, people/banaszkiewicz_piotr.html,
   people/barmby_pauline.html, people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html,
   people/batut_berenice.html, people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html,
   people/beitey_david.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
@@ -33,13 +33,14 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/debo_christof.html, people/demichelis_raffaella.html, people/dennis_tim.html,
   people/derrick_james.html, people/desjardins_james.html, people/devenyi_gabriel.html,
   people/devlin_catherine.html, people/diaz-gil_andres.html, people/dickenson_matt.html,
-  people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
-  people/doyle_kimberly.html, people/droop_alastair.html, people/duchesne_laurent.html,
-  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html,
-  people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html,
-  people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
-  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
-  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
+  people/dickson_r.html, people/diong_joanna.html, people/doehle_phillip.html, people/dolson_emily.html,
+  people/dotson_david.html, people/doyle_kimberly.html, people/droop_alastair.html,
+  people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
+  people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
+  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
+  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
+  people/farsarakis_emmanouil.html, people/fauber_bennet.html, people/fei_xu.html,
+  people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
   people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/flaxman_abraham.html,
   people/fonnesbeck_chris.html, people/fontenelle_hugues.html, people/ford_jes.html,
   people/forstner_konrad.html, people/fournier_auriel.html, people/fowler_philip.html,
@@ -64,28 +65,28 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
   people/johnson_ben.html, people/johnston_luke.html, people/johnston_myfanwy.html,
   people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
-  people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html, people/khetani_radhika.html,
-  people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html,
-  people/kitzes_j.html, people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
-  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
-  people/koontz_michael.html, people/kumar_avishek.html, people/kuzak_mateusz.html,
-  people/kwakwa_kwasi.html, people/labou_stephanie.html, people/lafleur_olivier.html,
-  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
-  people/laken_benjamin.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
-  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
-  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/leng_joanna.html,
-  people/levernier_jacob.html, people/leyder_jean-christophe.html, people/li_peter.html,
-  people/liberton_denise.html, people/lightman_matthew.html, people/lijnzaad_philip.html,
-  people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lotterhos_kathleen.html,
-  people/love_rebecca.html, people/lowe_elijah.html, people/lowndes_julia.html, people/luo_yuxi.html,
-  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
-  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
-  people/mansour_tamer.html, people/marek_diana.html, people/marini_camille.html,
-  people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
-  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
-  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
-  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
-  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/kazmi_saira.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
+  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
+  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
+  people/knuth_shelley.html, people/koch_christina.html, people/koenig_steven.html,
+  people/koeppel_alexander.html, people/konrad_b.html, people/koontz_michael.html,
+  people/kozlov_igor.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
+  people/labou_stephanie.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
+  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
+  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
+  people/leng_joanna.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
+  people/li_peter.html, people/liberton_denise.html, people/lightman_matthew.html,
+  people/lijnzaad_philip.html, people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html,
+  people/lotterhos_kathleen.html, people/love_rebecca.html, people/lowe_elijah.html,
+  people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
+  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
+  people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
+  people/marek_diana.html, people/marini_camille.html, people/martinez_paula.html,
+  people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
+  people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
+  people/mcclung_bill.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
   people/michnowicz_s.html, people/michonneau_francois.html, people/middleton_ryan.html,
@@ -123,33 +124,34 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
   people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
-  people/smith_daniel.html, people/smith_j.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
-  people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
-  people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
-  people/stachelek_joseph.html, people/stacy_mark.html, people/standage_daniel.html,
-  people/staneva_valentina.html, people/stanton-cook_mitchell.html, people/stapleton_jim.html,
-  people/staton_margaret.html, people/steinbach_peter.html, people/stevens_sarah.html,
-  people/stillwell_mark.html, people/stimberg_marcel.html, people/strootman_jonathan.html,
-  people/sumner_mike.html, people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html,
-  people/swaminathan_gayathri.html, people/taber-thomas_bradley.html, people/tarkowski_leszek.html,
-  people/tarvin_becca.html, people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html,
-  people/telenczuk_bartosz.html, people/telenczuk_maria.html, people/terman_rochelle.html,
-  people/teucher_andrew.html, people/thoele_florian.html, people/thomas_adam.html,
-  people/thomson_samuel.html, people/thrimawithana_amali.html, people/till_robert.html,
-  people/timbers_tiffany.html, people/tomlinson_christopher.html, people/tomsett_richard.html,
-  people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html,
-  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
-  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
-  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
-  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
-  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
-  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
-  people/vilbig_kevin.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
-  people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
-  people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html,
-  people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
-  people/wheeler_daniel.html, people/wheelhouse_mark.html, people/whitaker_melissa.html,
-  people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
+  people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
+  people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
+  people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
+  people/st-onge_pier-luc.html, people/stachelek_joseph.html, people/stacy_mark.html,
+  people/standage_daniel.html, people/staneva_valentina.html, people/stanton-cook_mitchell.html,
+  people/stapleton_jim.html, people/staton_margaret.html, people/steinbach_peter.html,
+  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
+  people/strootman_jonathan.html, people/sumner_mike.html, people/sundaram_arvind.html,
+  people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
+  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
+  people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
+  people/terman_rochelle.html, people/teucher_andrew.html, people/thoele_florian.html,
+  people/thomas_adam.html, people/thomson_samuel.html, people/thrimawithana_amali.html,
+  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
+  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html,
+  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html,
+  people/ushizima_daniela.html, people/vahtras_olav.html, people/vaidyanathan_ramnath.html,
+  people/valls-guimera_roman.html, people/van-der-helm_edwin.html, people/van-der-walt_anelda.html,
+  people/van-heusden_peter.html, people/van-rossum_thea.html, people/van-schyndel_jay.html,
+  people/van-tuyl_steve.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
+  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
+  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
+  people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
+  people/walker_dawn.html, people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html,
+  people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html,
+  people/weber_lukas.html, people/weinstein_ben.html, people/wheeler_daniel.html,
+  people/wheelhouse_mark.html, people/whitaker_melissa.html, people/white_e.html,
+  people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
   people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
   people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
   people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
@@ -160,10 +162,10 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
-  projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html,
-  projects/ipfs.html, projects/iplant.html, projects/jors.html, projects/khmer.html, projects/macroeco.html,
+  projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html, projects/ipfs.html,
+  projects/iplant.html, projects/jors.html, projects/khmer.html, projects/macroeco.html,
   projects/magetbrain.html, projects/mahotas.html, projects/math-education-resources.html,
   projects/mothur.html, projects/msl.html, projects/nipy.html, projects/open-tree-of-life.html,
-  projects/pecan.html, projects/practical-computing-for-biologists.html, projects/pymc.html, projects/pyne.html,
-  projects/pyrdm.html, projects/ropensci.html, projects/scikit-bio.html, projects/scikit-image.html,
-  projects/sharelatex.html, projects/stat-545.html, projects/tec.html]
+  projects/pecan.html, projects/practical-computing-for-biologists.html, projects/pymc.html,
+  projects/pyne.html, projects/pyrdm.html, projects/ropensci.html, projects/scikit-bio.html,
+  projects/scikit-image.html, projects/sharelatex.html, projects/stat-545.html, projects/tec.html]
