Updating archived metadata

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -4,7 +4,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
   people/anderson_c.html, people/anghel_catalina.html, people/antonioletti_mario.html,
   people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
-  people/bae_sung.html, people/bahlai_christie.html, people/bajcz_alex.html, people/banaszkiewicz_piotr.html,
+  people/bae_sung.html, people/bahlai_christie.html, people/banaszkiewicz_piotr.html,
   people/barmby_pauline.html, people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html,
   people/batut_berenice.html, people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html,
   people/beitey_david.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
@@ -65,14 +65,14 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
   people/johnson_ben.html, people/johnston_luke.html, people/johnston_myfanwy.html,
   people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
-  people/kazmi_saira.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
-  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
-  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
-  people/knuth_shelley.html, people/koch_christina.html, people/koenig_steven.html,
-  people/koeppel_alexander.html, people/konrad_b.html, people/koontz_michael.html,
-  people/kozlov_igor.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
-  people/labou_stephanie.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
-  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html, people/khetani_radhika.html,
+  people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html,
+  people/kitzes_j.html, people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
+  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
+  people/koontz_michael.html, people/kozlov_igor.html, people/kumar_avishek.html,
+  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/labou_stephanie.html,
+  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
+  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
   people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
   people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
   people/leng_joanna.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
@@ -81,11 +81,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lotterhos_kathleen.html, people/love_rebecca.html, people/lowe_elijah.html,
   people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
   people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
-  people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
-  people/marek_diana.html, people/marini_camille.html, people/martinez_paula.html,
-  people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
-  people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
-  people/mcclung_bill.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/manhaes-savio_alexandre.html, people/mansour_tamer.html, people/marek_diana.html,
+  people/marini_camille.html, people/martinez_paula.html, people/marwaha_kunal.html,
+  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
+  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
+  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
