--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -4,7 +4,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
   people/anderson_c.html, people/anghel_catalina.html, people/antonioletti_mario.html,
   people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
-  people/bae_sung.html, people/bahlai_christie.html, people/banaszkiewicz_piotr.html,
+  people/bae_sung.html, people/bahlai_christie.html, people/bajcz_alex.html, people/banaszkiewicz_piotr.html,
   people/barmby_pauline.html, people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html,
   people/batut_berenice.html, people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html,
   people/beitey_david.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
@@ -13,14 +13,15 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
   people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
   people/bostroem_a.html, people/boughton_andrew.html, people/bouquin_daina.html,
-  people/boyle_amy.html, people/bray_e.html, people/brin_lindsay.html, people/broman_karl.html,
-  people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html, people/brunson_dana.html,
-  people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html,
-  people/camins-esakov_jared.html, people/canino-koning_r.html, people/cannam_c.html,
-  people/capes_gerard.html, people/caporaso_greg.html, people/carr_lindsay.html, people/cartwright_reed.html,
-  people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
-  people/chase_john.html, people/chatzidimitriou_kyriakos.html, people/chen_daniel.html,
-  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html,
+  people/bowman_ross.html, people/boyle_amy.html, people/bray_e.html, people/brin_lindsay.html,
+  people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
+  people/brunson_dana.html, people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html,
+  people/calhoun_patrick.html, people/camins-esakov_jared.html, people/canino-koning_r.html,
+  people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html, people/card_daren.html,
+  people/carr_lindsay.html, people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html,
+  people/chan_cliburn.html, people/charbonneau_amanda.html, people/chase_john.html,
+  people/chatzidimitriou_kyriakos.html, people/chen_daniel.html, people/chisholm_chelsea.html,
+  people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html, people/christensen_garret.html,
   people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html,
   people/clare_richard.html, people/clayton_sarah.html, people/clayton_sophie.html,
   people/cmero_marek.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
@@ -43,36 +44,37 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
   people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/flaxman_abraham.html,
   people/fonnesbeck_chris.html, people/fontenelle_hugues.html, people/ford_jes.html,
-  people/forstner_konrad.html, people/fournier_auriel.html, people/fowler_philip.html,
-  people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html, people/furstenau_tara.html,
-  people/gacenga_francis.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
-  people/garcia-gutierrez_leonor.html, people/garcia_julian.html, people/garoutte_aaron.html,
-  people/gates_chris.html, people/gatto_laurent.html, people/geiger_stuart.html, people/geldenhuis_andre.html,
-  people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
-  people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
-  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
-  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
-  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
-  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
-  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
-  people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
-  people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
-  people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
-  people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html, people/hocking_daniel.html,
-  people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html, people/hollister_jeff.html,
+  people/ford_talitha.html, people/forstner_konrad.html, people/fournier_auriel.html,
+  people/fowler_philip.html, people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html,
+  people/furstenau_tara.html, people/gacenga_francis.html, people/gan_emilia.html,
+  people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
+  people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
+  people/geiger_stuart.html, people/geldenhuis_andre.html, people/ghaffari_noushin.html,
+  people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
+  people/gonzalez_ivan.html, people/gorman_gerard.html, people/graham_laura.html,
+  people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html, people/guignard_thomas.html,
+  people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html, people/guzman_melissa.html,
+  people/haddock_s.html, people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html,
+  people/hamrick_jessica.html, people/hansen_m.html, people/harris_rayna.html, people/harrison_anthony.html,
+  people/harstad_emelie.html, people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html,
+  people/held_fabian.html, people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html,
+  people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
+  people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
+  people/ho_xavier.html, people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html,
+  people/hojjati_alireza.html, people/holdgraf_c.html, people/hollister_jeff.html,
   people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
   people/irving_d.html, people/ismiraldi_yuandra.html, people/ivanov_p.html, people/jackson_m.html,
   people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
   people/johnson_ben.html, people/johnston_luke.html, people/johnston_myfanwy.html,
   people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
-  people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html, people/khetani_radhika.html,
-  people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html,
-  people/kitzes_j.html, people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
-  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
-  people/koontz_michael.html, people/kozlov_igor.html, people/kumar_avishek.html,
-  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/labou_stephanie.html,
-  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
-  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/kazmi_saira.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
+  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
+  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
+  people/knuth_shelley.html, people/koch_christina.html, people/koenig_steven.html,
+  people/koeppel_alexander.html, people/konrad_b.html, people/koontz_michael.html,
+  people/kozlov_igor.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
+  people/labou_stephanie.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
+  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
   people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
   people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
   people/leng_joanna.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
@@ -81,22 +83,24 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lotterhos_kathleen.html, people/love_rebecca.html, people/lowe_elijah.html,
   people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
   people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
-  people/manhaes-savio_alexandre.html, people/mansour_tamer.html, people/marek_diana.html,
-  people/marini_camille.html, people/martinez_paula.html, people/marwaha_kunal.html,
-  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
-  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
-  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
-  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
+  people/marconi_sergio.html, people/marek_diana.html, people/marini_camille.html,
+  people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
+  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
+  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
+  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
+  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
-  people/michnowicz_s.html, people/michonneau_francois.html, people/middleton_ryan.html,
-  people/miles_brian.html, people/milhans_jackie.html, people/mills_b.html, people/miotto_amanda.html,
-  people/mistry_meeta.html, people/mitchell_i.html, people/mokhtarzadeh_hamid.html,
-  people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html, people/mueller_andreas.html,
-  people/mueller_markus.html, people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html,
-  people/nahum_josh.html, people/nakhoul_hani.html, people/navarro_francisco.html,
-  people/nederbragt_l.html, people/neeb_moritz.html, people/nenadic_aleksandra.html,
-  people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/michnowicz_s.html, people/michonneau_francois.html, people/mickley_james.html,
+  people/middleton_ryan.html, people/miles_brian.html, people/milhans_jackie.html,
+  people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
+  people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html,
+  people/mueller_andreas.html, people/mueller_markus.html, people/munoz_ian.html,
+  people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html,
+  people/nandez_jose.html, people/navarro_francisco.html, people/nederbragt_l.html,
+  people/neeb_moritz.html, people/nenadic_aleksandra.html, people/neufeld_ryan.html,
+  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
   people/norris_timothy.html, people/nunez-iglesias_juan.html, people/ocais_alan.html,
   people/odell_allison-jai.html, people/ogrady_tina.html, people/oleary_aaron.html,
   people/oliver_jeffrey.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
@@ -128,38 +132,38 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
   people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
   people/st-onge_pier-luc.html, people/stachelek_joseph.html, people/stacy_mark.html,
-  people/standage_daniel.html, people/staneva_valentina.html, people/stanton-cook_mitchell.html,
-  people/stapleton_jim.html, people/staton_margaret.html, people/steinbach_peter.html,
-  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
-  people/strootman_jonathan.html, people/sumner_mike.html, people/sundaram_arvind.html,
-  people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
-  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
-  people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
-  people/terman_rochelle.html, people/teucher_andrew.html, people/thoele_florian.html,
-  people/thomas_adam.html, people/thomson_samuel.html, people/thrimawithana_amali.html,
-  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
-  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html,
-  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html,
-  people/ushizima_daniela.html, people/vahtras_olav.html, people/vaidyanathan_ramnath.html,
-  people/valls-guimera_roman.html, people/van-der-helm_edwin.html, people/van-der-walt_anelda.html,
-  people/van-heusden_peter.html, people/van-rossum_thea.html, people/van-schyndel_jay.html,
-  people/van-tuyl_steve.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
-  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
-  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
-  people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
-  people/walker_dawn.html, people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html,
-  people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html,
-  people/weber_lukas.html, people/weinstein_ben.html, people/wheeler_daniel.html,
-  people/wheelhouse_mark.html, people/whitaker_melissa.html, people/white_e.html,
-  people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
+  people/stafford_jeff.html, people/standage_daniel.html, people/staneva_valentina.html,
+  people/stanton-cook_mitchell.html, people/stapleton_jim.html, people/staton_margaret.html,
+  people/steinbach_peter.html, people/stevens_sarah.html, people/stillwell_mark.html,
+  people/stimberg_marcel.html, people/strootman_jonathan.html, people/stubbs_daniel.html,
+  people/sumner_mike.html, people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html,
+  people/swaminathan_gayathri.html, people/taber-thomas_bradley.html, people/tarkowski_leszek.html,
+  people/tarvin_becca.html, people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html,
+  people/telenczuk_bartosz.html, people/telenczuk_maria.html, people/terman_rochelle.html,
+  people/teucher_andrew.html, people/thoele_florian.html, people/thomas_adam.html,
+  people/thomson_samuel.html, people/thrimawithana_amali.html, people/till_robert.html,
+  people/timbers_tiffany.html, people/tomlinson_christopher.html, people/tomsett_richard.html,
+  people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html,
+  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
+  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
+  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
+  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
+  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
+  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
+  people/vilbig_kevin.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
+  people/wake_leanne.html, people/walker_andrew.html, people/walker_dawn.html, people/wallis_mike.html,
+  people/walsh_alistair.html, people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html,
+  people/waugh_b.html, people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
+  people/wheeler_daniel.html, people/wheelhouse_mark.html, people/whitaker_melissa.html,
+  people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
   people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
   people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
-  people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
-  people/wilson_g.html, people/wilson_p.html, people/winston_donald.html, people/winton_jared.html,
-  people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/wu_steven.html,
-  people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
-  people/zhang_jingchao.html, people/zhang_qp.html, people/zimmerman_naupaka.html,
-  people/zito_t.html, people/zonca_andrea.html]
+  people/williams_ryan.html, people/williamson_evan.html, people/williford_anna.html,
+  people/willmore_frank.html, people/wilson_g.html, people/wilson_p.html, people/winston_donald.html,
+  people/winton_jared.html, people/woo_kara.html, people/woods_c.html, people/wright_thomas.html,
+  people/wu_steven.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
+  people/zakkaroff_constantine.html, people/zhang_jingchao.html, people/zhang_qp.html,
+  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html, projects/ipfs.html,
